[gd_scene load_steps=27 format=3 uid="uid://choia3yvhsti"]

[ext_resource type="Texture2D" uid="uid://bm6h3teyitvsl" path="res://Sprites/King and Pigs/12-Live and Coins/Live Bar.png" id="1_j7lro"]
[ext_resource type="Script" path="res://Scripts/InterfaceGame.gd" id="1_uevu2"]
[ext_resource type="Texture2D" uid="uid://dvqn01x4cftvq" path="res://Sprites/King and Pigs/12-Live and Coins/Small Diamond (18x14).png" id="2_1yrn3"]
[ext_resource type="Texture2D" uid="uid://caow0vu6md3wk" path="res://Sprites/King and Pigs/12-Live and Coins/Small Heart Hit (18x14).png" id="3_av86x"]
[ext_resource type="Texture2D" uid="uid://csixbdjmgub8s" path="res://Sprites/King and Pigs/12-Live and Coins/Numbers (6x8).png" id="3_xpamt"]
[ext_resource type="Texture2D" uid="uid://dsbejyluufneq" path="res://Sprites/King and Pigs/12-Live and Coins/Small Heart Idle (18x14).png" id="4_wrrd1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nisnk"]
atlas = ExtResource("3_av86x")
region = Rect2(0, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_cycd3"]
atlas = ExtResource("3_av86x")
region = Rect2(18, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuloh"]
atlas = ExtResource("4_wrrd1")
region = Rect2(0, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl3ro"]
atlas = ExtResource("4_wrrd1")
region = Rect2(18, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dab3"]
atlas = ExtResource("4_wrrd1")
region = Rect2(36, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ego65"]
atlas = ExtResource("4_wrrd1")
region = Rect2(54, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sxjl"]
atlas = ExtResource("4_wrrd1")
region = Rect2(72, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnfyi"]
atlas = ExtResource("4_wrrd1")
region = Rect2(90, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_njcuj"]
atlas = ExtResource("4_wrrd1")
region = Rect2(108, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_nljr7"]
atlas = ExtResource("4_wrrd1")
region = Rect2(126, 0, 18, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_xm4y1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nisnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cycd3")
}],
"loop": false,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuloh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl3ro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dab3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ego65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sxjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnfyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njcuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nljr7")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lxwnq"]
atlas = ExtResource("2_1yrn3")
region = Rect2(0, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh7et"]
atlas = ExtResource("2_1yrn3")
region = Rect2(18, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd31u"]
atlas = ExtResource("2_1yrn3")
region = Rect2(36, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5mr3"]
atlas = ExtResource("2_1yrn3")
region = Rect2(54, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf86f"]
atlas = ExtResource("2_1yrn3")
region = Rect2(72, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfrhg"]
atlas = ExtResource("2_1yrn3")
region = Rect2(90, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcgd6"]
atlas = ExtResource("2_1yrn3")
region = Rect2(108, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkm4n"]
atlas = ExtResource("2_1yrn3")
region = Rect2(126, 0, 18, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_3f7vb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxwnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh7et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd31u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5mr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf86f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfrhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcgd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkm4n")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[node name="Interface" type="Control"]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uevu2")

[node name="Container" type="Container" parent="."]
layout_mode = 1

[node name="LiveBar" type="Sprite2D" parent="Container"]
texture_filter = 1
position = Vector2(150, 80)
scale = Vector2(4, 4)
texture = ExtResource("1_j7lro")

[node name="Heart1" type="AnimatedSprite2D" parent="Container/LiveBar"]
position = Vector2(-13, 3.8147e-06)
sprite_frames = SubResource("SpriteFrames_xm4y1")
animation = &"Idle"

[node name="Heart2" type="AnimatedSprite2D" parent="Container/LiveBar"]
position = Vector2(-1.99999, 3.8147e-06)
sprite_frames = SubResource("SpriteFrames_xm4y1")
animation = &"Idle"

[node name="Heart3" type="AnimatedSprite2D" parent="Container/LiveBar"]
position = Vector2(9.00001, 3.8147e-06)
sprite_frames = SubResource("SpriteFrames_xm4y1")
animation = &"Idle"

[node name="Diamond" type="AnimatedSprite2D" parent="Container"]
texture_filter = 1
position = Vector2(100, 144)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_3f7vb")
animation = &"Idle"
frame_progress = 0.654672

[node name="Number1" type="Sprite2D" parent="Container/Diamond"]
texture_filter = 1
position = Vector2(12.75, -0.499996)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_xpamt")
hframes = 10
frame = 9

[node name="Number2" type="Sprite2D" parent="Container/Diamond"]
texture_filter = 1
position = Vector2(19.25, -0.499996)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_xpamt")
hframes = 10
frame = 9
